fixed spacing issue with blinking cursor

--- a/style.scss
+++ b/style.scss
@@ -175,7 +175,8 @@ section {
             font-family: "Consolas";
             line-height: 1.2;
             text-align: left;
-            white-space: pre-line;
+            // white-space: pre-line;
+            white-space: pre;
 
             br {
                 
@@ -206,7 +207,6 @@ section {
         }
     }
 }
-
 
 .cmdText::selection {
     background: #fff; /* WebKit/Blink Browsers */
